[package]
name = "jshell"
version = "0.1.0"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
edition = "2018"
description = "JSH is a sandboxed shell that input and output JSON (which is handy)"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
